--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIGTAK</title>
     <!--link allmin document  -->
-    <link rel="stylesheet" href="/CSS/all.min.css">
+    <link rel="stylesheet" href="./CSS/all.min.css">
     <!-- link normalize document -->
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="./CSS/normalize.css">
     <!-- link bigtakcss css document -->
-    <link rel="stylesheet" href="/CSS/bigtak.css">
+    <link rel="stylesheet" href="./CSS/bigtak.css">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
